[gd_scene load_steps=4 format=3 uid="uid://fg42buvsyx52"]

[ext_resource type="Script" path="res://scripts/player/camera_rig.gd" id="1_61fpa"]
[ext_resource type="Shader" path="res://assets/shaders/forground_shader.gdshader" id="2_am1oi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mu53q"]
shader = ExtResource("2_am1oi")
shader_parameter/MULTIPLIER = 0.545
shader_parameter/SCALE = 0.63
shader_parameter/SOFTNESS = 0.45
shader_parameter/BASE_OPACITY = 1.0

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_61fpa")

[node name="base_camera" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="base_camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_viewport" type="SubViewport" parent="base_camera/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="background_camera" type="Camera3D" parent="base_camera/background_viewport_container/background_viewport"]
cull_mask = 1047553

[node name="forground_viewport_container" type="SubViewportContainer" parent="base_camera"]
material = SubResource("ShaderMaterial_mu53q")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="forground_viewport" type="SubViewport" parent="base_camera/forground_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="forground_camera" type="Camera3D" parent="base_camera/forground_viewport_container/forground_viewport"]
cull_mask = 1047554
